<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_theme"
    android:orientation="vertical"
    android:padding="20dp">

    <TextView
        style="@style/white_text_16sp_charging_station_module"
        android:layout_gravity="center"
        android:layout_margin="30dp"
        android:text="@string/battery_low"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        app:srcCompat="@drawable/ic_battery_icon"/>

    <TextView
        style="@style/white_text_14sp_charging_station_module"
        android:layout_marginTop="20dp"
        android:text="@string/way_to_station"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/charging_station_title"
                style="@style/white_text_16sp_charging_station_module"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/vendorConnectorId"
                    style="@style/white_text_16sp_charging_station_module"
                    android:layout_marginRight="12dp"
                    android:text="connector id"
                    android:visibility="gone"/>

                <TextView
                    android:id="@+id/connectorId"
                    style="@style/white_text_16sp_charging_station_module"
                    android:layout_marginRight="12dp"
                    android:text="connector id"
                    android:visibility="gone"/>

                <TextView
                    android:id="@+id/power_level"
                    style="@style/text_with_opacity_charging_station_module"
                    android:text="power level 30kw"
                    android:visibility="gone"/>

            </LinearLayout>

            <ProgressBar
                android:id="@+id/progress_bar_charging_station_dialog"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="gone"/>


        </LinearLayout>


        <ImageView
            android:id="@+id/direction_to_charging_station"
            android:layout_width="40dp"
            android:layout_height="50dp"
            android:src="@drawable/directions_icon"
            android:visibility="gone"/>


    </LinearLayout>

    <TextView
        android:id="@+id/tv_charging_station"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="@font/muli_semibold"
        android:text="@string/no_nearby_charging_station"
        android:textColor="@color/red"
        android:visibility="gone">

    </TextView>


</LinearLayout>