<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/popup_relative">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:fontFamily="@font/muli_bold"
                android:gravity="center"
                android:padding="@dimen/_5sdp"
                android:text="@string/requesting_ride"
                android:textColor="@android:color/black"
                android:textSize="@dimen/_14sdp" />

            <RelativeLayout
                android:id="@+id/cancle_relative"
                android:layout_width="@dimen/_40sdp"
                android:layout_height="@dimen/_40sdp"
                android:layout_alignParentEnd="true">

                <ImageView
                    android:layout_width="@dimen/_20sdp"
                    android:layout_height="@dimen/_20sdp"
                    android:layout_centerInParent="true"
                    android:src="@drawable/ic_baseline_close_24"
                    app:tint="@android:color/black" />


            </RelativeLayout>
        </RelativeLayout>


        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1sdp"
            android:background="@color/gray"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="@dimen/_10sdp">

            <TextView
                android:id="@+id/ride_desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/ride_request_for"
                android:textColor="@android:color/black"
                android:textSize="@dimen/_11sdp"
                android:layout_gravity="center" />

            <TextView
                android:id="@+id/username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_gravity="center"
                android:textColor="@android:color/black"
                android:textSize="@dimen/_12sdp"
                android:fontFamily="@font/muli_bold"/>


            <TextView
                android:id="@+id/userphone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@android:color/black"
                android:textSize="@dimen/_12sdp"
                android:layout_gravity="center"
                android:fontFamily="@font/muli_bold"/>

            <TextView
                android:id="@+id/date_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="Monday April 08, 7 PM"
                android:textColor="@android:color/black"
                android:fontFamily="@font/muli_bold"
                android:textSize="@dimen/_11sdp"
                android:layout_gravity="center" />

            <TextView
                android:id="@+id/estimated_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_10sdp"
                android:fontFamily="@font/muli_bold"
                android:gravity="center"
                android:text="₹ 1410.00"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/_18sdp" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/estimated_fare"
                android:textColor="@android:color/black"
                android:textSize="@dimen/_11sdp"
                android:layout_gravity="center"/>


            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/_1sdp"
                android:background="@color/gray"
                android:layout_marginTop="@dimen/_10sdp"/>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/trip_details"
                android:textColor="@android:color/black"
                android:textSize="@dimen/_14sdp"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_15sdp"
                android:fontFamily="@font/karlaregular"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_20sdp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_gravity="center"
                        android:gravity="center">
                        <ImageView
                            android:layout_width="@dimen/_20sdp"
                            android:layout_height="@dimen/_20sdp"
                            android:src="@drawable/location"/>

                        <View
                            android:id="@+id/imageView7"
                            android:layout_width="1dp"
                            android:layout_height="@dimen/_20sdp"
                            android:background="@drawable/bg_dotted_line_vertical"
                            android:layerType="software"/>

                    </LinearLayout>

                    <TextView
                        android:id="@+id/from_address"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/trip_details"
                        android:textColor="@android:color/black"
                        android:textSize="@dimen/_12sdp"
                        android:layout_gravity="center"
                        android:layout_marginStart="@dimen/_10sdp"
                        android:fontFamily="@font/karlaregular"/>


                </LinearLayout>



                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="@dimen/_5sdp">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_gravity="center"
                        android:gravity="center">

                        <View
                            android:layout_width="1dp"
                            android:layout_height="@dimen/_10sdp"
                            android:background="@drawable/bg_dotted_line_vertical"
                            android:layerType="software" />

                        <ImageView
                            android:layout_width="@dimen/_20sdp"
                            android:layout_height="@dimen/_20sdp"
                            android:src="@drawable/location"
                            android:tint="@color/colorPrimary"/>

                    </LinearLayout>

                    <TextView
                        android:id="@+id/to_address"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/trip_details"
                        android:textColor="@android:color/black"
                        android:textSize="@dimen/_12sdp"
                        android:layout_gravity="center"
                        android:layout_marginStart="@dimen/_10sdp"
                        android:fontFamily="@font/karlaregular"/>
                </LinearLayout>
            </LinearLayout>

            <TextView
                android:id="@+id/confirmbtn"
                android:layout_width="@dimen/_100sdp"
                android:layout_height="@dimen/_35sdp"
                android:layout_gravity="center"
                android:layout_margin="@dimen/_10sdp"
                android:background="@drawable/background_button_shape"
                android:fontFamily="@font/muli_bold"
                android:gravity="center"
                android:text="@string/ok"
                android:textColor="@color/white" />


        </LinearLayout>

    </LinearLayout>

</RelativeLayout>